cluster/homelab/apps/archive/oneuptime/ingress.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: oneuptime
    namespace: oneuptime
    annotations:
        gethomepage.dev/enabled: "true"
        gethomepage.dev/description: Uptime Monitor
        gethomepage.dev/group: Monitoring
        gethomepage.dev/icon: oneuptime
        gethomepage.dev/name: Oneuptime
spec:
    ingressClassName: nginx
    tls:
        -   hosts:
                - "*.stefangenov.site"
            secretName: ingress
    rules:
        -   host: oneuptime.stefangenov.site
            http:
                paths:
                    -   pathType: Prefix
                        path: "/"
                        backend:
                            service:
                                name: oneuptime-nginx
                                port:
                                    number: 80
